# Codaphela.Library

./: .gitignore  CMakeLists.txt  CommonLibraries.ruleset  us.stackdump
BaseLib/: ASCIINode.cpp  ASCIINode.h  ASCIITree.cpp  ASCIITree.h  Aardvark.cpp  Aardvark.h  AbstractFile.cpp  AbstractFile.h  AccessDataOrderer.cpp  AccessDataOrderer.h  AdditionalTypes.cpp  AdditionalTypes.h  Alloc.cpp  Alloc.h  ArrayBase.cpp  ArrayBase.h  ArrayBit.cpp  ArrayBit.h  ArrayBlock.cpp  ArrayBlock.h  ArrayBlockMinimal.cpp  ArrayBlockMinimal.h  ArrayBlockSorted.cpp  ArrayBlockSorted.h  ArrayChar.cpp  ArrayChar.h  ArrayCharMinimal.cpp  ArrayCharMinimal.h  ArrayChars.cpp  ArrayChars.h  ArrayDenseTemplate.h  ArrayDouble.cpp  ArrayDouble.h  ArrayElementNotFound.h  ArrayEmbedded.h  ArrayFloat.cpp  ArrayFloat.h  ArrayFloat32.cpp  ArrayFloat32.h  ArrayFloat64.cpp  (+959 more)
BerkeleyLib/: BerkeleyDB.cpp  BerkeleyDB.h  BerkeleyLib.sln  BerkeleyLib.vcxproj  BerkeleyLib.vcxproj.filters
CoreLib/: Annotation.cpp  Annotation.h  ArrayTransientIndexedPointer.cpp  ArrayTransientIndexedPointer.h  ArrayVariable.cpp  ArrayVariable.h  CalcBinaryExpression.cpp  CalcBinaryExpression.h  CalcConstExpression.cpp  CalcConstExpression.h  CalcExpression.cpp  CalcExpression.h  CalcObject.cpp  CalcObject.h  CalcOperator.cpp  CalcOperator.h  CalcParentheses.cpp  CalcParentheses.h  CalcUnaryExpression.cpp  CalcUnaryExpression.h  Calculator.cpp  Calculator.h  CharEncoding.cpp  CharEncoding.h  ClusterCache.cpp  ClusterCache.h  CodaBase.cpp  CodaBase.h  CodabaseFactory.cpp  CodabaseFactory.h  ConnectSocket.cpp  ConnectSocket.h  CoreLib.cbp  CoreLib.depend  CoreLib.vcxproj  CoreLib.vcxproj.filters  DataConnection.h  Database.cpp  Database.h  DatabaseFactory.cpp  (+379 more)
CppParserLib/: ASCIIIndex.cpp  ASCIIIndex.h  ASCIINameIndex.cpp  ASCIINameIndex.h  ASCIINode.h  ASCIITree.cpp  ASCIITree.h  ASTAccessSpec.cpp  ASTAccessSpec.h  ASTAggregate.cpp  ASTAggregate.h  ASTArray.cpp  ASTArray.h  ASTBinaryExpr.cpp  ASTBinaryExpr.h  ASTBlockStmt.cpp  ASTBlockStmt.h  ASTBreakStmt.cpp  ASTBreakStmt.h  ASTCastExpr.cpp  ASTCastExpr.h  ASTClassSpec.cpp  ASTClassSpec.h  ASTCommon.h  ASTConstExpr.cpp  ASTConstExpr.h  ASTContinueStmt.cpp  ASTContinueStmt.h  ASTDeclarator.cpp  ASTDeclarator.h  ASTDoStmt.cpp  ASTDoStmt.h  ASTExpression.cpp  ASTExpression.h  ASTExpressionStmt.cpp  ASTExpressionStmt.h  ASTForStmt.cpp  ASTForStmt.h  ASTIfStmt.cpp  ASTIfStmt.h  (+198 more)
DirectXLib/: Constants.h  DebugMovementFlightStyle.cpp  DebugMovementFlightStyle.h  DebugMovementWalkStyle.cpp  DebugMovementWalkStyle.h  Direct3DGlobal.cpp  Direct3DGlobal.h  DirectXGlobal.cpp  DirectXGlobal.h  DirectXLib.vcxproj  DirectXLib.vcxproj.filters  FlexibleVertexFormats.h  TextureStates.h
ElectronicsLib/: Circuit.cpp  Circuit.h  ElectroncisLib.vcxproj  ElectroncisLib.vcxproj.filters
GameLib/: Control.h  GameLib.vcxproj  GameLib.vcxproj.filters  GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h
GerberLib/: GerberApertureMacro.cpp  GerberApertureMacro.h  GerberApertureMacroCenterLine.cpp  GerberApertureMacroCenterLine.h  GerberApertureMacroCircle.cpp  GerberApertureMacroCircle.h  GerberApertureMacroComment.cpp  GerberApertureMacroComment.h  GerberApertureMacroOutline.cpp  GerberApertureMacroOutline.h  GerberApertureMacroPolygon.cpp  GerberApertureMacroPolygon.h  GerberApertureMacroThermal.cpp  GerberApertureMacroThermal.h  GerberApertureMacroVectorLine.cpp  GerberApertureMacroVectorLine.h  GerberBoardLayer.h  GerberBoardSide.h  GerberCommand.cpp  GerberCommand.h  GerberCommandApertureAttribute.cpp  GerberCommandApertureAttribute.h  GerberCommandApertureMacro.cpp  GerberCommandApertureMacro.h  GerberCommandAttribute.cpp  GerberCommandAttribute.h  GerberCommandComment.cpp  GerberCommandComment.h  GerberCommandEndOfFile.cpp  GerberCommandEndOfFile.h  GerberCommandEnum.h  GerberCommandFileAttribute.cpp  GerberCommandFileAttribute.h  GerberCommandFormatSpecifier.cpp  GerberCommandFormatSpecifier.h  GerberCommandLoadMirroring.cpp  GerberCommandLoadMirroring.h  GerberCommandLoadPolarity.cpp  GerberCommandLoadPolarity.h  GerberCommandLoadRotation.cpp  (+27 more)
ImageLib/: ImageLib.sln  ImageLib.vcxproj  ImageLib.vcxproj.filters  adler32.c  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  gzio.c  infback.c  inffast.c  inflate.c  inflate.h  inftrees.c  inftrees.h  png.c  png.h  pngconf.h  pngerror.c  pnggccrd.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtest.c  pngtrans.c  pngvcrd.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c  trees.c  uncompr.c  zconf.h  zlib.h  (+2 more)
InputLib/: Input.cpp  Input.h  InputActions.cpp  InputActions.h  InputCategories.cpp  InputCategories.h  InputCategory.cpp  InputCategory.h  InputCategoryGeneric.cpp  InputCategoryGeneric.h  InputChord.cpp  InputChord.h  InputChordCriteria.cpp  InputChordCriteria.h  InputChordCriteriaDesc.cpp  InputChordCriteriaDesc.h  InputChordDesc.cpp  InputChordDesc.h  InputChordDescs.cpp  InputChordDescs.h  InputChordReader.cpp  InputChordReader.h  InputChords.cpp  InputChords.h  InputDataFormat.cpp  InputDataFormat.h  InputDataFormats.cpp  InputDataFormats.h  InputDevice.cpp  InputDevice.h  InputDeviceCopyContext.cpp  InputDeviceCopyContext.h  InputDeviceDesc.cpp  InputDeviceDesc.h  InputDevicePointerArray.h  InputDeviceState.cpp  InputDeviceState.h  InputDeviceValue.cpp  InputDeviceValue.h  InputDeviceValueHistory.h  (+64 more)
JavaParserLib/: JavaAmbiguous.cpp  JavaAmbiguous.h  JavaAnnotation.cpp  JavaAnnotation.h  JavaBoolean.cpp  JavaBoolean.h  JavaCharacter.cpp  JavaCharacter.h  JavaComment.cpp  JavaComment.h  JavaFloat.cpp  JavaFloat.h  JavaGeneric.cpp  JavaGeneric.h  JavaIdentifier.cpp  JavaIdentifier.h  JavaInteger.cpp  JavaInteger.h  JavaKeyword.cpp  JavaKeyword.h  JavaLiteral.cpp  JavaLiteral.h  JavaModifier.cpp  JavaModifier.h  JavaModifiers.cpp  JavaModifiers.h  JavaNull.cpp  JavaNull.h  JavaOperator.cpp  JavaOperator.h  JavaParserLib.vcxproj  JavaParserLib.vcxproj.filters  JavaScope.cpp  JavaScope.h  JavaSeparator.cpp  JavaSeparator.h  JavaString.cpp  JavaString.h  JavaSyntax.cpp  JavaSyntax.h  (+121 more)
LanguageLib/: Meta.cpp  (+27 more)
(+1474 files in other folders)
