cmake_minimum_required(VERSION 3.10)
project(common)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-fpermissive")

add_definitions(-DLINUX_GNU_32)

include_directories(BaseLib)

add_executable(common
        BaseLib/Aardvark.cpp
        BaseLib/Aardvark.h
        BaseLib/AbstractFile.cpp
        BaseLib/AbstractFile.h
        BaseLib/ArrayBit.cpp
        BaseLib/ArrayBit.h
        BaseLib/ArrayBlock.cpp
        BaseLib/ArrayBlock.h
        BaseLib/ArrayBlockSorted.cpp
        BaseLib/ArrayBlockSorted.h
        BaseLib/ArrayChar.h
        BaseLib/ArrayCharMinimal.cpp
        BaseLib/ArrayCharMinimal.h
        BaseLib/ArrayChars.cpp
        BaseLib/ArrayChars.h
        BaseLib/ArrayDenseTemplate.h
        BaseLib/ArrayDouble.h
        BaseLib/ArrayDouble.cpp
        BaseLib/ArrayFloat.h
        BaseLib/ArrayInt.cpp
        BaseLib/ArrayInt.h
        BaseLib/ArrayInt2D.cpp
        BaseLib/ArrayInt2D.h
        BaseLib/ArrayIntAndPointer.cpp
        BaseLib/ArrayIntAndPointer.h
        BaseLib/ArrayIntMinimal.cpp
        BaseLib/ArrayIntMinimal.h
        BaseLib/ArrayLong.cpp
        BaseLib/ArrayLong.h
        BaseLib/ArraySparseTemplate.h
        BaseLib/ArrayTemplate.h
        BaseLib/ArrayTemplateEmbedded.h
        BaseLib/ArrayTemplateMinimal.h
        BaseLib/ArrayTemplatePrimitive.h
        BaseLib/ArrayVoidPtr.cpp
        BaseLib/ArrayVoidPtr.h
        BaseLib/BaseFileNode.cpp
        BaseLib/BaseFileNode.h
        BaseLib/BaseMemory.cpp
        BaseLib/BaseMemory.h
        BaseLib/Bool.h
        BaseLib/BufferedFile.cpp
        BaseLib/BufferedFile.h
        BaseLib/Chars.cpp
        BaseLib/Chars.h
        BaseLib/CharsHelper.cpp
        BaseLib/CharsHelper.h
        BaseLib/ChunkFile.cpp
        BaseLib/ChunkFile.h
        BaseLib/ChunkFileFile.cpp
        BaseLib/ChunkFileFile.h
        BaseLib/ChunkFileGeneral.h
        BaseLib/ChunkFileHeader.cpp
        BaseLib/ChunkFileHeader.h
        BaseLib/ChunkFileIndex.cpp
        BaseLib/ChunkFileIndex.h
        BaseLib/ChunkStack.cpp
        BaseLib/ChunkStack.h
        BaseLib/ConstructorCall.h
        BaseLib/Constructors.cpp
        BaseLib/Constructors.h
        BaseLib/CSVFile.cpp
        BaseLib/CSVFile.h
        BaseLib/CSVFileEditable.cpp
        BaseLib/CSVFileEditable.h
        BaseLib/CSVFileImutable.cpp
        BaseLib/CSVFileImutable.h
        BaseLib/CSVHelper.cpp
        BaseLib/CSVHelper.h
        BaseLib/DataMacro.h
        BaseLib/DataMemory.cpp
        BaseLib/DataMemory.h
        BaseLib/DataTypes.cpp
        BaseLib/DataTypes.h
        BaseLib/Date.cpp
        BaseLib/Date.h
        BaseLib/DebugOutput.h
        BaseLib/Define.h
        BaseLib/DiskFile.cpp
        BaseLib/DiskFile.h
        BaseLib/EnumeratorBlock.cpp
        BaseLib/EnumeratorBlock.h
        BaseLib/EnumeratorEnumerator.cpp
        BaseLib/EnumeratorEnumerator.h
        BaseLib/EnumeratorPointer.cpp
        BaseLib/EnumeratorPointer.h
        BaseLib/EnumeratorTemplate.cpp
        BaseLib/EnumeratorTemplate.h
        BaseLib/EnumeratorVoid.cpp
        BaseLib/EnumeratorVoid.h
        BaseLib/ErrorHandler.cpp
        BaseLib/ErrorHandler.h
        BaseLib/ErrorTypes.cpp
        BaseLib/ErrorTypes.h
        BaseLib/EscapeCodes.cpp
        BaseLib/EscapeCodes.h
        BaseLib/FastFunctions.cpp
        BaseLib/FastFunctions.h
        BaseLib/FastMemcmp.cpp
        BaseLib/FastMemcmp.h
        BaseLib/FastMemcpy.cpp
        BaseLib/FastMemcpy.h
        BaseLib/FastMemcpyBackwards.cpp
        BaseLib/FastMemcpyBackwards.h
        BaseLib/FastMemset.cpp
        BaseLib/FastMemset.h
        BaseLib/FileBasic.cpp
        BaseLib/FileBasic.h
        BaseLib/FileCompare.cpp
        BaseLib/FileCompare.h
        BaseLib/FileCopier.cpp
        BaseLib/FileCopier.h
        BaseLib/FileHeader.cpp
        BaseLib/FileHeader.h
        BaseLib/FileIndex.cpp
        BaseLib/FileIndex.h
        BaseLib/FileIO.h
        BaseLib/FileMode.cpp
        BaseLib/FileMode.h
        BaseLib/FileNames.h
        BaseLib/FileNode.h
        BaseLib/FileNodeDirectory.h
        BaseLib/FileNodeFileSystem.cpp
        BaseLib/FileNodeFileSystem.h
        BaseLib/FilePosition.cpp
        BaseLib/FilePosition.h
        BaseLib/FileReader.cpp
        BaseLib/FileReader.h
        BaseLib/FileSystem.cpp
        BaseLib/FileSystem.h
        BaseLib/FileSystemGeneral.h
        BaseLib/FileSystemIterator.cpp
        BaseLib/FileSystemIterator.h
        BaseLib/FileUtil.cpp
        BaseLib/FileUtil.h
        BaseLib/FileUtil_Linux.cpp
        BaseLib/FileUtil_Windows.cpp
        BaseLib/FileWriter.cpp
        BaseLib/FileWriter.h
        BaseLib/Float2.cpp
        BaseLib/Float2.h
        BaseLib/Float3.cpp
        BaseLib/Float3.h
        BaseLib/Float4.cpp
        BaseLib/Float4.h
        BaseLib/Float4x4.cpp
        BaseLib/Float4x4.h
        BaseLib/FloatHelper.cpp
        BaseLib/FloatHelper.h
        BaseLib/FreeList.cpp
        BaseLib/FreeList.h
        BaseLib/FreeListAllocator.cpp
        BaseLib/FreeListAllocator.h
        BaseLib/GeneralMemory.cpp
        BaseLib/GeneralMemory.h
        BaseLib/GeometricTypes.cpp
        BaseLib/GeometricTypes.h
        BaseLib/GlobalMemory.cpp
        BaseLib/GlobalMemory.h
        BaseLib/GlobalMemoryAllocator.cpp
        BaseLib/GlobalMemoryAllocator.h
        BaseLib/GuidClass.cpp
        BaseLib/GuidClass.h
        BaseLib/IndexTree.cpp
        BaseLib/IndexTree.h
        BaseLib/IndexTreeMemory.cpp
        BaseLib/IndexTreeMemory.h
        BaseLib/IndexTreeNode.cpp
        BaseLib/IndexTreeNode.h
        BaseLib/IndexTreeNodeMemory.cpp
        BaseLib/IndexTreeNodeMemory.h
        BaseLib/IndexTreeRecursor.cpp
        BaseLib/IndexTreeRecursor.h
        BaseLib/IndexTreeTemplateMemory.h
        BaseLib/Int2.cpp
        BaseLib/Int2.h
        BaseLib/Int3.cpp
        BaseLib/Int3.h
        BaseLib/Int4.cpp
        BaseLib/Int4.h
        BaseLib/IntegerHelper.cpp
        BaseLib/IntegerHelper.h
        BaseLib/LinkedListBlock.cpp
        BaseLib/LinkedListBlock.h
        BaseLib/LinkedListBlockAligned.cpp
        BaseLib/LinkedListBlockAligned.h
        BaseLib/LinkedListTemplate.h
        BaseLib/LinkedListTemplateFreeList.h
        BaseLib/ListBlock.cpp
        BaseLib/ListBlock.h
        BaseLib/ListCharsMinimal.cpp
        BaseLib/ListCharsMinimal.h
        BaseLib/ListTemplate.h
        BaseLib/ListTemplateMinimal.h
        BaseLib/ListVariable.cpp
        BaseLib/ListVariable.h
        BaseLib/LocalMallocator.cpp
        BaseLib/LocalMallocator.h
        BaseLib/Log.h
        BaseLib/LogConfig.h
        BaseLib/Logger.cpp
        BaseLib/Logger.h
        BaseLib/LogString.cpp
        BaseLib/LogString.h
        BaseLib/Mallocator.h
        BaseLib/Mallocators.cpp
        BaseLib/Mallocators.h
        BaseLib/MapBlock.cpp
        BaseLib/MapBlock.h
        BaseLib/MapIntInt.cpp
        BaseLib/MapIntInt.h
        BaseLib/MapIntTemplate.h
        BaseLib/MapPtrPrimitiveTemplate.h
        BaseLib/MapPtrPtr.cpp
        BaseLib/MapPtrPtr.h
        BaseLib/MapStringBlock.cpp
        BaseLib/MapStringBlock.h
        BaseLib/MapStringInt.cpp
        BaseLib/MapStringInt.h
        BaseLib/MapStringString.cpp
        BaseLib/MapStringString.h
        BaseLib/MapStringTemplate.h
        BaseLib/MapTemplate.h
        BaseLib/Markup.cpp
        BaseLib/Markup.h
        BaseLib/MarkupBase.cpp
        BaseLib/MarkupBase.h
        BaseLib/MarkupDoc.cpp
        BaseLib/MarkupDoc.h
        BaseLib/MarkupReference.cpp
        BaseLib/MarkupReference.h
        BaseLib/MarkupSubstitute.cpp
        BaseLib/MarkupSubstitute.h
        BaseLib/MarkupTag.cpp
        BaseLib/MarkupTag.h
        BaseLib/MarkupText.cpp
        BaseLib/MarkupText.h
        BaseLib/MD5.cpp
        BaseLib/MD5.h
        BaseLib/MD5HashFile.cpp
        BaseLib/MD5HashFile.h
        BaseLib/MemoryAllocator.cpp
        BaseLib/MemoryAllocator.h
        BaseLib/MemoryBlock.cpp
        BaseLib/MemoryBlock.h
        BaseLib/MemoryCache.cpp
        BaseLib/MemoryCache.h
        BaseLib/MemoryCacheAllocation.cpp
        BaseLib/MemoryCacheAllocation.h
        BaseLib/MemoryFile.cpp
        BaseLib/MemoryFile.h
        BaseLib/MemoryFreeListParams.cpp
        BaseLib/MemoryFreeListParams.h
        BaseLib/MemoryHeader.cpp
        BaseLib/MemoryHeader.h
        BaseLib/MemoryStack.cpp
        BaseLib/MemoryStack.h
        BaseLib/MemoryStackExtended.cpp
        BaseLib/MemoryStackExtended.h
        BaseLib/NaiveFile.cpp
        BaseLib/NaiveFile.h
        BaseLib/Newline.cpp
        BaseLib/Newline.h
        BaseLib/NullAllocator.cpp
        BaseLib/NullAllocator.h
        BaseLib/Number.cpp
        BaseLib/Number.h
        BaseLib/NumberControl.cpp
        BaseLib/NumberControl.h
        BaseLib/Numbers.cpp
        BaseLib/Numbers.h
        BaseLib/PackedFloat.cpp
        BaseLib/PackedFloat.h
        BaseLib/PackFile.cpp
        BaseLib/PackFile.h
        BaseLib/PackFileIterator.cpp
        BaseLib/PackFileIterator.h
        BaseLib/PackFileNode.cpp
        BaseLib/PackFileNode.h
        BaseLib/PackFilePacker.cpp
        BaseLib/PackFilePacker.h
        BaseLib/PackFileReadArrary.cpp
        BaseLib/PackFileReadArrary.h
        BaseLib/PackFiles.cpp
        BaseLib/PackFiles.h
        BaseLib/PackFilesGeneral.h
        BaseLib/PointerFunctions.cpp
        BaseLib/PointerFunctions.h
        BaseLib/PointerRemapper.h
        BaseLib/PrimitiveTypes.h
        BaseLib/Quaternion.cpp
        BaseLib/Quaternion.h
        BaseLib/ScratchPad.cpp
        BaseLib/ScratchPad.h
        BaseLib/ScratchPadAllocator.cpp
        BaseLib/ScratchPadAllocator.h
        BaseLib/StackMark.cpp
        BaseLib/StackMark.h
        BaseLib/StackMemory.h
        BaseLib/StringHelper.cpp
        BaseLib/StringHelper.h
        BaseLib/SystemAllocator.cpp
        BaseLib/SystemAllocator.h
        BaseLib/TemporaryMemory.cpp
        BaseLib/TemporaryMemory.h
        BaseLib/TextFile.cpp
        BaseLib/TextFile.h
        BaseLib/TextParser.cpp
        BaseLib/TextParser.h
        BaseLib/TrackingAllocator.cpp
        BaseLib/TrackingAllocator.h
        BaseLib/TreeBlock.cpp
        BaseLib/TreeBlock.h
        BaseLib/TreeTemplate.h
        BaseLib/TypeConverter.cpp
        BaseLib/TypeConverter.h
        BaseLib/TypeConverter_Mapping.inl
        BaseLib/TypeNames.cpp
        BaseLib/TypeNames.h
        BaseLib/TypeParser.cpp
        BaseLib/TypeParser.h
        BaseLib/Validation.h
        BaseLib/Version.h
        BaseLib/WindowsHeaders.h BaseLib/ArrayChar.cpp BaseLib/ArrayFloat.cpp)
